<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solvit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Login">bSubmit</string>
    <string name="bSubmit">Login</string>
    <string name="etPass">Password</string>
    <string name="etUser">Username</string>
    <string name="you_made_it">You Made It</string>
    <string name="f">Sign Up</string>
    <string name="text1">Not Yet a Member ?</string>
    <string name="text2">Forgot Password ?</string>
    <string name="Fname">First Name</string>
    <string name="Sname">Second Name</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="PasswordConfirm">Retype Password</string>
    <string name="Register">Register</string>
    <string name="Title">Title</string>
    <string name="Question">Type question here</string>
    <string name="bAskGroup">Ask Group</string>
    <string name="bAskPublic">Ask Public</string>
    <string name="FriendTitle">Friend Requets</string>
    <string name="GameTitle">Game Invites</string>
    
    <string name="spinner_title">Select Category</string>
    <string-array name="category_array">
	        <item>Art</item>
	        <item>Business</item>
	        <item>English</item>
	        <item>Geography</item>
	        <item>History</item>
	        <item>Math</item>
	        <item>Religion</item>
	        <item>Science</item>
    </string-array>
    
    <string-array name="Navigation_array">
	        <item>Home</item>
	        <item>Questions</item>
	        <item>Friends</item>
	        <item>Notifications</item>
	        <item>Messages</item>
	        <item>Users</item>
	        <item>Settings</item>
    </string-array>
     <string name="action_home">Home</string>
     <string name="action_askedQuestions">Questions</string>
     <string name="action_allQuestions">All Questions</string>
     <string name="action_friends">Friends</string>
     <string name="action_Notifications">Notifications</string>
     <string name="action_Messages">Messages</string>
     <string name="action_users">Users</string>
     
     
     
     <string name="btnChat">Chat</string>
     <string name="btnChallenge">Challenge</string>
     <string name="btnAddUser">Add</string>
     <string name="btnBlockUser">Block</string>
     <string name="tvAskedQ">Asked Questions</string>
     
     <string name="btnEdit">Edit</string>
     <string name="btnDelete">Delete</string>
     <string name="btnConfirm">Confirm</string>
     <string name="btnAccept">Accept</string>
     <string name="btnDecline">Decline</string>
     
     
     
    
</resources>
