<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/Fname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/Sname"
            android:inputType="textPersonName" />
        
    </LinearLayout>
    
      <EditText
          android:id="@+id/etEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:ems="10"
          android:hint="@string/Email"
          android:inputType="textPersonName|textWebEmailAddress" />
      
       <EditText
          android:id="@+id/etUsername"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:ems="10"
          android:hint="@string/Username"
          android:inputType="textPersonName|textWebEmailAddress" />
       
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPersonName|textWebEmailAddress|textPassword" />
        
        <EditText
            android:id="@+id/etPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/PasswordConfirm"
            android:inputType="textPersonName|textWebEmailAddress|textPassword" />

	    <Button
	        android:id="@+id/bRegister"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:background="@null"
	        android:text="@string/Register" />

  

        
  

</LinearLayout>