<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

         <ImageView
           android:id="@+id/ivUserProfilePic"
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:src="@drawable/profilepic_icon" />

       <LinearLayout
     	   android:layout_width="match_parent"
     	   android:layout_height="wrap_content"
     	   android:orientation="vertical" >
        
        <TextView
            android:id="@+id/tvUserFirstName"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="TextView" />

        <TextView
            android:id="@+id/tvUserSecondName"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="TextView" />

        </LinearLayout>

        
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
       

            <Button
                android:id="@+id/btnChat"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/btnChat" />

            <Button
                android:id="@+id/btnChallenge"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/btnChallenge" />

            <Button
                android:id="@+id/btnAddUser"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/btnAddUser" />

            <Button
                android:id="@+id/btnBlockUser"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/btnBlockUser" />
        </LinearLayout>
        
        <LinearLayout
               	 android:layout_width="match_parent"
            	 android:layout_height="wrap_content"
            	 android:gravity="center">

        <TextView
              android:id="@+id/tvAskedQ"
          	  android:layout_width="wrap_content"
          	  android:layout_height="wrap_content"
         	  android:textSize="25sp"
              android:text="@string/tvAskedQ"
              android:textAppearance="?android:attr/textAppearanceMedium" />
        
		</LinearLayout>
		
        <ListView
    	  	  android:id="@+id/lvUserAskedQuestion"
    	      android:layout_width="fill_parent"
    	      android:layout_height="wrap_content" >
   		 </ListView>
</LinearLayout>