<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    
  	<LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
     <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="80dp"
        android:contentDescription="ImageProfile"
        android:layout_height="match_parent"
        android:src="@drawable/ic_launcher" />
    
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
   
	    <TextView
	        android:id="@+id/tvFirstnameProfile"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="John"
	        android:textSize="25sp" />
	   	
	    <TextView
	        android:id="@+id/tvSecondnameProfile"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Smith"
	        android:textSize="18sp" />

    	</LinearLayout>
    </LinearLayout>

  	<EditText
  	    android:id="@+id/etTitle"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
		android:hint="@string/Title" >

  	 
  	</EditText>
   
        <EditText
            android:id="@+id/etQuestion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:hint="@string/Question"
            android:inputType="textMultiLine" >

          
        </EditText>

     

      <LinearLayout
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bAskGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="5"
            android:hint="@string/bAskGroup"/>

        <Button
            android:id="@+id/bAskPublic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@null"
            android:hint="@string/bAskPublic" />
        
    </LinearLayout>

      <Spinner
          android:id="@+id/spinner1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:entries="@array/category_array" />
    
</LinearLayout>